force-app/main/default/objects/SubUserLog__c/SubUserLog__c.object-meta.xml
<CustomObject>
    <label>SubUserLog</label>
    <nameField>
        <displayFormat>SULC-{YYYY}{MM}{0000}</displayFormat>
        <label>SubUserLog Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubUserLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>