force-app/main/default/objects/SubUserLog__c/fields/ActionDetails__c.field-meta.xml
<CustomField>
    <fullName>ActionDetails__c</fullName>
    <label>ActionDetails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>