force-app/main/default/objects/SubUserLog__c/fields/Device_Info__c.field-meta.xml
<CustomField>
    <fullName>Device_Info__c</fullName>
    <label>Device Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>