force-app/main/default/objects/SubUserLog__c/fields/DeviceID__c.field-meta.xml
<CustomField>
    <fullName>DeviceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DeviceID</label>
    <referenceTo>SubUser_Device__c</referenceTo>
    <relationshipLabel>SubUserLogs</relationshipLabel>
    <relationshipName>SubUserLogs</relationshipName>
    <type>Lookup</type>
</CustomField>