force-app/main/default/objects/SubUserLog__c/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StoreId</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>SubUserLogs</relationshipLabel>
    <relationshipName>SubUserLogs</relationshipName>
    <type>Lookup</type>
</CustomField>