force-app/main/default/objects/SubUserLog__c/fields/SubUser__c.field-meta.xml
<CustomField>
    <fullName>SubUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubUser</label>
    <referenceTo>SubUser__c</referenceTo>
    <relationshipLabel>SubUserLogs</relationshipLabel>
    <relationshipName>SubUserLogs</relationshipName>
    <type>Lookup</type>
</CustomField>